--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
 					state.ui = 'lvlselect';
 					state.lvledit.lvleditdata = null;
 					state.gameplay.stage = 0;
-					state.lvlselect..selectedlvl = checkpoint.lvl;
+					state.lvlselect.selectedlvl = checkpoint.lvl;
 				}
 				checkpoint.pt = 0;
 				checkpoint.lvl++;
