--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@
 				state.ui = 'lvlselect';
 				state.lvledit.lvleditdata = null;
 				state.gameplay.stage = 0;
-				state.lvlselect..selectedlvl = checkpoint.lvl;
+				state.lvlselect.selectedlvl = checkpoint.lvl;
 			} else if (e.which === 80 && state.lvledit.lvleditdata) {
 				if (state.ui == 'gameplay') {
 					state.ui = 'lvledit';
