--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
 	{"tuttext":["","","",""],"pts":[{"x":200,"y":400,"type":"checkpoint","thickness":20,"animation":null,"filled":false},{"x":200,"y":325,"type":"midpoint","thickness":20,"animation":null},{"x":200,"y":300,"type":"curve","thickness":20,"animation":null},{"x":200,"y":250,"type":"curve","thickness":20,"animation":null},{"x":250,"y":250,"type":"curve","thickness":20,"animation":null},{"x":275,"y":250,"type":"midpoint","thickness":20,"animation":null},{"x":300,"y":275,"type":"midpoint","thickness":20,"animation":null},{"x":325,"y":225,"type":"midpoint","thickness":20,"animation":null},{"x":350,"y":275,"type":"midpoint","thickness":20,"animation":null},{"x":375,"y":225,"type":"midpoint","thickness":20,"animation":null},{"x":400,"y":275,"type":"midpoint","thickness":20,"animation":null},{"x":425,"y":225,"type":"midpoint","thickness":20,"animation":null},{"x":450,"y":275,"type":"midpoint","thickness":20,"animation":null},{"x":475,"y":225,"type":"midpoint","thickness":20,"animation":null},{"x":500,"y":275,"type":"midpoint","thickness":20,"animation":null},{"x":525,"y":225,"type":"midpoint","thickness":20,"animation":null},{"x":550,"y":275,"type":"midpoint","thickness":20,"animation":null},{"x":575,"y":225,"type":"midpoint","thickness":20,"animation":null},{"x":600,"y":275,"type":"midpoint","thickness":20,"animation":null},{"x":625,"y":225,"type":"midpoint","thickness":20,"animation":null},{"x":650,"y":250,"type":"midpoint","thickness":20,"animation":null},{"x":700,"y":250,"type":"curve","thickness":20,"animation":null},{"x":750,"y":250,"type":"curve","thickness":20,"animation":null},{"x":750,"y":300,"type":"curve","thickness":20,"animation":null},{"x":725,"y":325,"type":"midpoint","thickness":20,"animation":null},{"x":775,"y":350,"type":"midpoint","thickness":20,"animation":null},{"x":750,"y":400,"type":"checkpoint","thickness":20,"animation":null,"filled":false},{"x":775,"y":450,"type":"midpoint","thickness":20,"animation":null},{"x":725,"y":475,"type":"midpoint","thickness":20,"animation":null},{"x":750,"y":500,"type":"curve","thickness":20,"animation":null},{"x":750,"y":550,"type":"curve","thickness":20,"animation":null},{"x":700,"y":550,"type":"curve","thickness":20,"animation":null},{"x":650,"y":550,"type":"midpoint","thickness":20,"animation":null},{"x":625,"y":575,"type":"midpoint","thickness":20,"animation":null},{"x":600,"y":525,"type":"midpoint","thickness":20,"animation":null},{"x":575,"y":575,"type":"midpoint","thickness":20,"animation":null},{"x":550,"y":525,"type":"midpoint","thickness":20,"animation":null},{"x":525,"y":575,"type":"midpoint","thickness":20,"animation":null},{"x":500,"y":525,"type":"midpoint","thickness":20,"animation":null},{"x":475,"y":575,"type":"midpoint","thickness":20,"animation":null},{"x":450,"y":525,"type":"midpoint","thickness":20,"animation":null},{"x":425,"y":575,"type":"midpoint","thickness":20,"animation":null},{"x":400,"y":525,"type":"midpoint","thickness":20,"animation":null},{"x":375,"y":575,"type":"midpoint","thickness":20,"animation":null},{"x":350,"y":525,"type":"midpoint","thickness":20,"animation":null},{"x":325,"y":575,"type":"midpoint","thickness":20,"animation":null},{"x":300,"y":525,"type":"midpoint","thickness":20,"animation":null},{"x":275,"y":550,"type":"midpoint","thickness":20,"animation":null},{"x":250,"y":550,"type":"curve","thickness":20,"animation":null,"filled":false},{"x":200,"y":550,"type":"curve","thickness":20,"animation":null},{"x":200,"y":514.0625,"type":"checkpoint","thickness":20,"animation":null,"filled":false}],"fusespeed":150,"name":"#15: Coils & Wires"},
 	{"tuttext":["","","",""],"pts":[{"x":225,"y":400,"type":"checkpoint","thickness":20,"animation":null,"filled":false},{"x":325,"y":400,"type":"curve","thickness":20,"animation":null},{"x":325,"y":450,"type":"curve","thickness":20,"animation":null},{"x":375,"y":450,"type":"curve","thickness":20,"animation":null},{"x":375,"y":400,"type":"midpoint","thickness":20,"animation":null},{"x":375,"y":400,"type":"curve","thickness":20,"animation":null},{"x":425,"y":400,"type":"curve","thickness":20,"animation":null},{"x":425,"y":450,"type":"curve","thickness":20,"animation":null},{"x":475,"y":450,"type":"midpoint","thickness":20,"animation":null},{"x":475,"y":450,"type":"curve","thickness":20,"animation":null},{"x":475,"y":400,"type":"curve","thickness":20,"animation":null},{"x":525,"y":400,"type":"curve","thickness":20,"animation":null},{"x":525,"y":450,"type":"midpoint","thickness":20,"animation":null},{"x":525,"y":450,"type":"curve","thickness":20,"animation":null},{"x":575,"y":450,"type":"curve","thickness":20,"animation":null},{"x":575,"y":400,"type":"curve","thickness":20,"animation":null},{"x":625,"y":400,"type":"midpoint","thickness":20,"animation":null},{"x":625,"y":400,"type":"curve","thickness":20,"animation":null},{"x":625,"y":450,"type":"curve","thickness":20,"animation":null},{"x":675,"y":450,"type":"curve","thickness":20,"animation":null},{"x":675,"y":400,"type":"midpoint","thickness":20,"animation":null},{"x":675,"y":400,"type":"midpoint","thickness":20,"animation":null},{"x":775,"y":400,"type":"checkpoint","thickness":20,"animation":null,"filled":false}],"fusespeed":200,"name":"#16: Bumpy Road"},
 	{"tuttext":["","","",""],"pts":[{"x":600,"y":400,"type":"checkpoint","thickness":20,"animation":null,"filled":true},{"x":300,"y":400,"type":"curve","thickness":20,"animation":null},{"x":200,"y":400,"type":"curve","thickness":20,"animation":null},{"x":200,"y":500,"type":"curve","thickness":20,"animation":null},{"x":200,"y":500,"type":"midpoint","thickness":20,"animation":null},{"x":200,"y":500,"type":"curve","thickness":20,"animation":null},{"x":200,"y":600,"type":"curve","thickness":20,"animation":null},{"x":300,"y":600,"type":"curve","thickness":20,"animation":null},{"x":700,"y":600,"type":"midpoint","thickness":20,"animation":null},{"x":750,"y":600,"type":"curve","thickness":20,"animation":null},{"x":800,"y":600,"type":"curve","thickness":20,"animation":null},{"x":800,"y":550,"type":"curve","thickness":20,"animation":null},{"x":750,"y":550,"type":"curve","thickness":20,"animation":null},{"x":300,"y":550,"type":"midpoint","thickness":20,"animation":null},{"x":300,"y":550,"type":"curve","thickness":20,"animation":null},{"x":250,"y":550,"type":"curve","thickness":20,"animation":null},{"x":250,"y":500,"type":"curve","thickness":20,"animation":null},{"x":300,"y":500,"type":"curve","thickness":20,"animation":null},{"x":700,"y":500,"type":"midpoint","thickness":20,"animation":null},{"x":700,"y":500,"type":"curve","thickness":20,"animation":null},{"x":750,"y":500,"type":"curve","thickness":20,"animation":null},{"x":750,"y":450,"type":"curve","thickness":20,"animation":null},{"x":750,"y":400,"type":"checkpoint","thickness":20,"animation":null,"filled":true},{"x":750,"y":350,"type":"curve","thickness":20,"animation":null},{"x":750,"y":300,"type":"curve","thickness":20,"animation":null},{"x":700,"y":300,"type":"curve","thickness":20,"animation":null},{"x":300,"y":300,"type":"midpoint","thickness":20,"animation":null},{"x":300,"y":300,"type":"curve","thickness":20,"animation":null},{"x":250,"y":300,"type":"curve","thickness":20,"animation":null},{"x":250,"y":250,"type":"curve","thickness":20,"animation":null},{"x":300,"y":250,"type":"curve","thickness":20,"animation":null},{"x":700,"y":250,"type":"midpoint","thickness":20,"animation":null},{"x":750,"y":250,"type":"curve","thickness":20,"animation":null},{"x":800,"y":250,"type":"curve","thickness":20,"animation":null},{"x":800,"y":200,"type":"curve","thickness":20,"animation":null},{"x":750,"y":200,"type":"curve","thickness":20,"animation":null},{"x":300,"y":200,"type":"midpoint","thickness":20,"animation":null},{"x":300,"y":200,"type":"curve","thickness":20,"animation":null},{"x":200,"y":200,"type":"curve","thickness":20,"animation":null},{"x":200,"y":300,"type":"curve","thickness":20,"animation":null},{"x":200,"y":300,"type":"midpoint","thickness":20,"animation":null},{"x":200,"y":350,"type":"checkpoint","thickness":20,"animation":null,"filled":true}],"fusespeed":200,"name":"#17: Just Around the Corner"},
-	{"tuttext":["","","",""],"pts":[{"x":400,"y":300,"type":"checkpoint","thickness":20,"animation":null,"filled":false},{"x":650,"y":450,"type":"midpoint","thickness":20,"animation":null},{"x":450,"y":450,"type":"midpoint","thickness":20,"animation":null},{"x":500,"y":600,"type":"midpoint","thickness":20,"animation":null},{"x":250,"y":500,"type":"midpoint","thickness":20,"animation":null},{"x":400,"y":450,"type":"midpoint","thickness":20,"animation":null},{"x":200,"y":250,"type":"midpoint","thickness":20,"animation":null},{"x":400,"y":200,"type":"midpoint","thickness":20,"animation":null},{"x":650,"y":200,"type":"midpoint","thickness":20,"animation":null},{"x":550,"y":300,"type":"midpoint","thickness":20,"animation":null},{"x":700,"y":250,"type":"midpoint","thickness":20,"animation":null},{"x":700,"y":550,"type":"checkpoint","thickness":20,"animation":null,"filled":false}],"fusespeed":200,"name":"#18: Edgy, Not Like Other Levels"}
+	{"tuttext":["","","",""],"pts":[{"x":400,"y":300,"type":"checkpoint","thickness":20,"animation":null,"filled":false},{"x":650,"y":450,"type":"midpoint","thickness":20,"animation":null},{"x":450,"y":450,"type":"midpoint","thickness":20,"animation":null},{"x":500,"y":600,"type":"midpoint","thickness":20,"animation":null},{"x":250,"y":500,"type":"midpoint","thickness":20,"animation":null},{"x":400,"y":450,"type":"midpoint","thickness":20,"animation":null},{"x":200,"y":250,"type":"midpoint","thickness":20,"animation":null},{"x":400,"y":200,"type":"midpoint","thickness":20,"animation":null},{"x":650,"y":200,"type":"midpoint","thickness":20,"animation":null},{"x":550,"y":300,"type":"midpoint","thickness":20,"animation":null},{"x":700,"y":250,"type":"midpoint","thickness":20,"animation":null},{"x":700,"y":550,"type":"checkpoint","thickness":20,"animation":null,"filled":false}],"fusespeed":200,"name":"#18: Edgy, Not Like Other Levels"},
+	{"tuttext":["Lines can crossover each other! You can't switch to a different colored line without going through a checkpoint first","","",""],"pts":[{"x":200,"y":550,"type":"checkpoint","thickness":20,"animation":null,"filled":true},{"x":500,"y":550,"type":"midpoint","thickness":20,"animation":null},{"x":500,"y":250,"type":"checkpoint","thickness":20,"animation":null,"filled":true},{"x":300,"y":250,"type":"midpoint","thickness":20,"color":1,"animation":null},{"x":300,"y":400,"type":"midpoint","thickness":20,"color":1,"animation":null},{"x":800,"y":400,"type":"checkpoint","thickness":20,"color":1,"animation":null,"filled":true}],"fusespeed":200,"name":"#19: Hmm... Can't go around..."},
+	{"tuttext":["","","",""],"pts":[{"x":250,"y":425,"type":"checkpoint","thickness":20,"animation":null,"filled":true},{"x":550,"y":425,"type":"checkpoint","thickness":20,"animation":null,"filled":true},{"x":550,"y":225,"type":"midpoint","thickness":20,"color":1,"animation":null},{"x":350,"y":225,"type":"midpoint","thickness":20,"color":1,"animation":null},{"x":350,"y":575,"type":"checkpoint","thickness":20,"color":1,"animation":null,"filled":true},{"x":750,"y":575,"type":"midpoint","thickness":20,"color":2,"animation":null},{"x":750,"y":325,"type":"midpoint","thickness":20,"color":2,"animation":null},{"x":450,"y":325,"type":"checkpoint","thickness":20,"color":2,"animation":null,"filled":true},{"x":450,"y":525,"type":"midpoint","thickness":20,"color":3,"animation":null},{"x":650,"y":525,"type":"midpoint","thickness":20,"color":3,"animation":null},{"x":650,"y":225,"type":"checkpoint","thickness":20,"color":3,"animation":null,"filled":true}],"fusespeed":200,"name":"#20: Keep Moving and Nobody Explodes"}
 		];
 		var frame = 0;
 		var canvas = document.getElementById('game');
@@ -143,7 +145,8 @@
 				fuseoffset: 0,
 				oncheckpoint: false,
 				ghostrecord: {
-				}
+				},
+				lastcolor: -1
 			},
 			lvledit: {
 				lvleditdata: null,
@@ -293,7 +296,9 @@
 
 		function addcurve(path, curve, res) {
 			for (var i = 0; i <= 1; i += res) {
-				path.push(calculatecurve(curve, i));
+				var pts = calculatecurve(curve, i);
+				pts.color = curve[curve.length - 1].color;
+				path.push(pts);
 			}
 		}
 
@@ -306,23 +311,23 @@
 					current = [];
 				}
 				if (pathpoint.type == "curve" && current.length > 0) {
-					current.push({x: pathpoint.x, y: pathpoint.y, type: pathpoint.type});
+					current.push({x: pathpoint.x, y: pathpoint.y, type: pathpoint.type, color: pathpoint.color});
 				} else if (pathpoint.type == "curve") {
-					newpathpoints.push([{x: pathpoint.x, y: pathpoint.y, type: pathpoint.type}]);
+					newpathpoints.push([{x: pathpoint.x, y: pathpoint.y, type: pathpoint.type, color: pathpoint.color}]);
 				} else if (current.length > 0) {
 					if (current.length >= 3) {
 						newpathpoints.splice(newpathpoints.length - 1, 1);
 						addcurve(newpathpoints, current, 0.01);
-						newpathpoints.push({x: pathpoint.x, y: pathpoint.y, type: pathpoint.type});
+						newpathpoints.push({x: pathpoint.x, y: pathpoint.y, type: pathpoint.type, color: pathpoint.color});
 					} else {
 						newpathpoints.splice(newpathpoints.length - 1, 1);
 						for (ii = 0; ii < current.length; ii++) {
 							newpathpoints.push(current[ii]);
 						}
-						newpathpoints.push({x: pathpoint.x, y: pathpoint.y, type: pathpoint.type});
+						newpathpoints.push({x: pathpoint.x, y: pathpoint.y, type: pathpoint.type, color: pathpoint.color});
 					}
 				} else {
-					newpathpoints.push({x: pathpoint.x, y: pathpoint.y, type: pathpoint.type});
+					newpathpoints.push({x: pathpoint.x, y: pathpoint.y, type: pathpoint.type, color: pathpoint.color});
 				}
 		  }
 		var current = newpathpoints[newpathpoints.length - 1];
@@ -330,13 +335,13 @@
 			if (current.length >= 3) {
 				newpathpoints.splice(newpathpoints.length - 1, 1);
 				addcurve(newpathpoints, current, 0.01);
-				newpathpoints.push({x: pathpoint.x, y: pathpoint.y, type: pathpoint.type});
+				newpathpoints.push({x: pathpoint.x, y: pathpoint.y, type: pathpoint.type, color: pathpoint.color});
 			} else {
 				newpathpoints.splice(newpathpoints.length - 1, 1);
 				for (ii = 0; ii < current.length; ii++) {
 					newpathpoints.push(current[ii]);
 				}
-				newpathpoints.push({x: pathpoint.x, y: pathpoint.y, type: pathpoint.type});
+				newpathpoints.push({x: pathpoint.x, y: pathpoint.y, type: pathpoint.type, color: pathpoint.color});
 			}
 		}
 		//if (pathpoints[0].type == "checkpoint") {
@@ -534,17 +539,39 @@
 					state.gameplay.fuseoffset -= (state.gameplay.fuseoffset - beginoffset) / 10;
 				}
 				ctx.lineWidth = pts[0].thickness;
-				ctx.beginPath();
+				//ctx.beginPath();
+				ctx.lineCap = 'round';
+				if (state.gameplay.oncheckpoint) {
+					state.gameplay.lastcolor = -1;
+				}
 				for (var i = 0; i < drawnpoints.length; i++) {
 					var pt = drawnpoints[i];
 					if (i > 0) {
+						if (pt.color == 1) {
+							ctx.strokeStyle = 'red';
+						} else if (pt.color == 2) {
+							ctx.strokeStyle = 'green';
+						} else if (pt.color == 3) {
+							ctx.strokeStyle = 'purple';
+						} else {
+							ctx.strokeStyle = 'DodgerBlue';
+						}
 						ctx.lineTo(pt.x, pt.y);
+						ctx.stroke();
+						if (ctx.isPointInStroke(mouseX, mouseY)) {
+							if (state.gameplay.lastcolor == -1) {
+								state.gameplay.lastcolor = pt.color;
+							}
+							if (state.gameplay.lastcolor == pt.color) {
+								cursoronsomething = true;
+							}
+						}
+						ctx.beginPath();
+						ctx.moveTo(pt.x, pt.y);
 					} else {
+						ctx.beginPath();
 						ctx.moveTo(pt.x, pt.y);
 					}
-				}
-				if (ctx.isPointInStroke(mouseX, mouseY)) {
-					cursoronsomething = true;
 				}
 				ctx.stroke();
 				ctx.lineWidth = 10;
@@ -742,12 +769,26 @@
 				var primarycheckpt = checkpts[checkpoint.pt];
 				var drawnpoints = offsetpath(pts, 0);
 				ctx.lineWidth = pts[0].thickness;
-				ctx.beginPath();
+				//ctx.beginPath();
+				ctx.lineCap = 'round';
 				for (var i = 0; i < drawnpoints.length; i++) {
 					var pt = drawnpoints[i];
 					if (i > 0) {
+						if (pt.color == 1) {
+							ctx.strokeStyle = 'red';
+						} else if (pt.color == 2) {
+							ctx.strokeStyle = 'green';
+						} else if (pt.color == 3) {
+							ctx.strokeStyle = 'purple';
+						} else {
+							ctx.strokeStyle = 'DodgerBlue';
+						}
 						ctx.lineTo(pt.x, pt.y);
+						ctx.stroke();
+						ctx.beginPath();
+						ctx.moveTo(pt.x, pt.y);
 					} else {
+						ctx.beginPath();
 						ctx.moveTo(pt.x, pt.y);
 					}
 				}
@@ -1141,6 +1182,15 @@
 					state.lvledit.editgrid = !state.lvledit.editgrid;
 				} else if (e.which === 81) {
 					selectedpt.type = 'curve';
+				} else if (e.which === 82) {
+					if (selectedpt.color == 0 || selectedpt.color == null || !selectedpt.color) {
+						selectedpt.color = 1;
+					} else {
+						selectedpt.color++;
+					}
+				}
+				if (selectedpt.color > 3) {
+					selectedpt.color = 0;
 				}
 				if (state.lvledit.editpt < 0) {
 					state.lvledit.editpt = pts.length - 1;
