--- a/index.html
+++ b/index.html
@@ -1064,7 +1064,8 @@
 									x: 200,
 									y: 400,
 									type: 'checkpoint',
-									thickness: 20
+									thickness: 20,
+									color: 0
 								},
 							],
 							fusespeed: 0,
