--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		}
 		</style>
 	</head>
-	<body>
+	<body oncontextmenu="return false;">
 		<canvas id="game" width="1000" height="800"></canvas>
 		<script>
 		window.onerror = function(message, source, line, col, error) {
